components/policies-rd/rings/ring-1/base/image-controller/.chainsaw-test/resources/imagerepository-bad-lookalike-url.yaml
apiVersion: konflux-ci.dev/v1alpha1
kind: ImageRepository
metadata:
  name: test-bad-lookalike-url
spec:
  image:
    name: my-tenant/test
    visibility: public
  notifications:
    - config:
        url: 'https://bombino.preprod.api.redhat.com.attacker.com/webhook'
      event: repo_push
      method: webhook
      title: lookalike-host
