components/policies-rd/rings/ring-1/base/image-controller/.chainsaw-test/resources/imagerepository-bad-mixed.yaml
apiVersion: konflux-ci.dev/v1alpha1
kind: ImageRepository
metadata:
  name: test-bad-mixed
spec:
  image:
    name: my-tenant/test
    visibility: public
  notifications:
    - config:
        url: 'https://bombino.preprod.api.redhat.com/v1/sbom/quay/push'
      event: repo_push
      method: webhook
      title: SBOM-event-to-Bombino
    - config:
        url: 'https://denied.example.com/webhook'
      event: repo_push
      method: webhook
      title: exfiltration
