components/policies-rd/rings/ring-1/base/image-controller/.chainsaw-test/resources/imagerepository-bad-url.yaml
apiVersion: konflux-ci.dev/v1alpha1
kind: ImageRepository
metadata:
  name: test-bad-url
spec:
  image:
    name: my-tenant/test
    visibility: public
  notifications:
    - config:
        url: 'https://denied.example.com/webhook'
      event: repo_push
      method: webhook
      title: exfiltration
