components/policies-rd/rings/ring-1/base/image-controller/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-notifications-url
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
